--- a/50_spring-boot/10_概述.md
+++ b/50_spring-boot/10_概述.md
@@ -1,2 +1,28 @@
 
 http://blog.csdn.net/u012437781/article/details/78615265
+
+Spring框架4.0以上版本引入了一个新模块，即spring-websocket模块。
+它对WebSocket通信提供了支持。它兼容Java WebSocket API规范JSR-356，同时提供了额外的功能
+
+
+
+
+#  基础项目搭
+
+
+## 依赖
+
+
+## 新建WebSocket 的配置类
+
+
+## 控制器
+
+
+
+
+# 功能分析
+
+广播式
+即服务器段友消息时，会将消息发送给所有链接了当前endpoint的相同主题 的浏览器。
+
