--- a/20_spring-framework/参考.md
+++ b/20_spring-framework/参考.md
@@ -7,6 +7,9 @@
 遇到源码\
 http://www.iocoder.cn/Spring/good-collection/
 
+功能介绍
+http://www.ityouknow.com
+
 源码解读
 
 https://github.com/seaswalker/Spring
@@ -21,3 +24,5 @@ https://docs.spring.io/spring/docs/5.0.3.RELEASE/spring-framework-reference/
 spring IOC  AOP 事务
 
 http://blog.csdn.net/linuu/article/list/6
+
+https://github.com/dunwu/spring-notes/blob/master/docs/spring/core/spring-aop-01.md
