--- a/40_spring-mvc/10_常用.md
+++ b/40_spring-mvc/10_常用.md
@@ -30,3 +30,63 @@ https://www.cnblogs.com/vicis/articles/6077839.html
 
 
 动态编译
+
+
+#  参数原理
+
+原理
+他是怎样去获取数据
+怎样绑定的
+
+应用
+
+
+
+参数转换
+
+
+参数提交方式
+
+
+RequestParam
+
+范例
+ 	@GetMapping("/23")
+    	public Integer hello23(@RequestParam int id) 
+
+解释参数
+name
+请求参数的名称,
+默认等于被注解参数的名称
+required  
+是否必须传入这个参数  
+默认等于true 
+如果不传入 springmv 返回400  并提示Required Integer parameter 'id' is not present
+defaultValue
+参数的默认值
+默认=一个常数
+如果设置了默认值的话,required默认就变成false
+
+流程
+根据require的要求去查找请求参数里面是否具有相应的name,否则
+如果没有相应请求参数或者没有相应的参数值,则使用defaultValue给参数赋值
+
+
+举例
+请求 http://localhost:8080/41?id
+接口@RequestParam int id
+直接报错
+Failed to convert value of type 'java.lang.String' to required type 'int'; 
+nested exception is java.lang.NumberFormatException: For input string: \"\""
+接口@RequestParam integet id
+id = null
+
+
+
+
+http://www.cnblogs.com/bigdataZJ/p/springmvc2.html
+
+
+
+
+
