--- a/50_spring-boot/420_validate/readme/10_z作用.md
+++ b/50_spring-boot/420_validate/readme/10_z作用.md
@@ -11,3 +11,19 @@ bean-validate校验
 
 @HibernateValidate 使用限制参数必须输入  并进行校验   
 也没有 输入数据的 要求
+
+
+
+
+	@ExceptionHandler(value=MethodArgumentNotValidException.class)
+	@ResponseBody
+	public ResponseResult<?> handleMethodArgumentNotValidException(MethodArgumentNotValidException ex) {
+		BindingResult bindingResult = ex.getBindingResult();
+		String errorMesssage = "";
+		for (FieldError fieldError : bindingResult.getFieldErrors()) {
+			errorMesssage += fieldError.getDefaultMessage() + ", ";
+		}
+		ExceptionEnum exceptionEnum = ExceptionEnum.PARAM_VALID_ERROR;
+		exceptionEnum.setDetail(errorMesssage);
+		return ResponseResult.error(exceptionEnum);
+	}
