--- a/40_spring-mvc/10_常用.md
+++ b/40_spring-mvc/10_常用.md
@@ -82,10 +82,20 @@ nested exception is java.lang.NumberFormatException: For input string: \"\""
 id = null
 
 
-
+http://blog.csdn.net/kobejayandy/article/details/12690161
 
 http://www.cnblogs.com/bigdataZJ/p/springmvc2.html
 
+
+数组
+
+@RequestParam List userIds
+
+url?userIds=1%2C2&taskId=123 
+url?userIds=1&userIds=3&taskId=123
+
+http 
+http://blog.csdn.net/blueheart20/article/details/45174399
 
 
 
