--- a/50_spring-boot/420_validate/readme/10_z作用.md
+++ b/50_spring-boot/420_validate/readme/10_z作用.md
@@ -27,3 +27,271 @@ bean-validate校验
 		exceptionEnum.setDetail(errorMesssage);
 		return ResponseResult.error(exceptionEnum);
 	}
+	
+
+
+
+
+
+#JSR303
+
+Bean Validation 中内置的 constraint    
+   
+	@Null   被注释的元素必须为 null       
+	@NotNull    被注释的元素必须不为 null       
+	@AssertTrue     被注释的元素必须为 true       
+	@AssertFalse    被注释的元素必须为 false       
+	@Min(value)     被注释的元素必须是一个数字，其值必须大于等于指定的最小值       
+	@Max(value)     被注释的元素必须是一个数字，其值必须小于等于指定的最大值       
+	@DecimalMin(value)  被注释的元素必须是一个数字，其值必须大于等于指定的最小值       
+	@DecimalMax(value)  被注释的元素必须是一个数字，其值必须小于等于指定的最大值       
+	@Size(max=, min=)   被注释的元素的大小必须在指定的范围内       
+	@Digits (integer, fraction)     被注释的元素必须是一个数字，其值必须在可接受的范围内       
+	@Past   被注释的元素必须是一个过去的日期       
+	@Future     被注释的元素必须是一个将来的日期       
+	@Pattern(regex=,flag=)  被注释的元素必须符合指定的正则表达式   
+			    
+Hibernate Validator 附加的 constraint     
+  
+	@NotBlank(message =)   验证字符串非null，且长度必须大于0       
+	@Email  被注释的元素必须是电子邮箱地址       
+	@Length(min=,max=)  被注释的字符串的大小必须在指定的范围内       
+	@NotEmpty   被注释的字符串的必须非空       
+	@Range(min=,max=,message=)  被注释的元素必须在合适的范围内 
+
+
+```
+
+import javax.validation.constraints.Max;
+import org.hibernate.validator.constraints.Length;
+public class Entity {
+	@Max(value=3)//最大值为3
+	private int age;
+	@Length(max=1) //字符串长度最大为1,hibernate 扩展的
+	private String name;
+	public int getAge() {
+		return age;
+	}
+	public void setAge(int age) {
+		this.age = age;
+	}
+	public String getName() {
+		return name;
+	}
+	public void setName(String name) {
+		this.name = name;
+	}
+}
+```
+
+```
+import java.util.Set;
+import javax.validation.ConstraintViolation;
+import javax.validation.Validation;
+import javax.validation.Validator;
+import javax.validation.ValidatorFactory;
+public class Tv {
+	public static void main(String[] args) {
+		ValidatorFactory factory = Validation.buildDefaultValidatorFactory();
+		Validator validator = factory.getValidator();
+
+		Entity entity = new Entity();
+		entity.setAge(12);
+		entity.setName("admin");
+		Set<ConstraintViolation<Entity>> constraintViolations = validator.validate(entity);
+		for (ConstraintViolation<Entity> constraintViolation : constraintViolations) {
+			System.out.println("对象属性:"+constraintViolation.getPropertyPath());
+			System.out.println("国际化key:"+constraintViolation.getMessageTemplate());
+			System.out.println("错误信息:"+constraintViolation.getMessage());
+		}
+
+	}
+}
+```
+
+#分组验证及分组顺序
+
+#updateSelective
+
+if not null  就检验  
+
+
+#message
+
+这里有一个国际化的key值,国际化文件在org.hibernate.validator下面的一系列的properites文件里面,如果需要自定义那么可以拷贝出来放在src目录下
+
+可以硬编码
+@Max(value=20, message="{val.age.message}")   
+也可以
+@Length(max=6, min=3, message="{username.length}")
+将当前的错误数据显示戳来
+
+
+#自定义
+当hibernate validation提供的注解不能满足需求时，可以自定义校验约束。
+
+自定义注解约束步骤：
+
+创建注解
+创建注解对应的约束验证类
+使用注解
+测试注解
+创建注解 @Phone
+
+```
+package com.mengdee.manage.validator;
+
+import java.lang.annotation.Target;
+
+import javax.validation.Constraint;
+import javax.validation.Payload;
+
+import static java.lang.annotation.ElementType.ANNOTATION_TYPE;
+import static java.lang.annotation.ElementType.CONSTRUCTOR;
+import static java.lang.annotation.ElementType.FIELD;
+import static java.lang.annotation.ElementType.METHOD;
+import static java.lang.annotation.ElementType.PARAMETER;
+import static java.lang.annotation.RetentionPolicy.RUNTIME;
+
+import java.lang.annotation.Documented;
+import java.lang.annotation.Retention;
+
+@Target({METHOD, FIELD, ANNOTATION_TYPE, CONSTRUCTOR, PARAMETER })
+@Retention(RUNTIME)
+@Documented
+@Constraint(validatedBy = {PhoneConstraint.class})
+public @interface Phone {
+
+    String message() default "手机号格式错误";
+    String regexp() default "^((13[0-9])|(15[^4,\\D])|(18[0,3-9]))\\d{8}$";
+    Class<?>[] groups() default {};
+    Class<? extends Payload>[] payload() default { };
+
+
+    @Target({ METHOD, FIELD, ANNOTATION_TYPE, CONSTRUCTOR, PARAMETER })
+    @Retention(RUNTIME)
+    @Documented
+    public @interface List {
+        Phone[] value();
+    }   
+
+}
+```
+
+```
+package com.mengdee.manage.validator;
+
+import javax.validation.ConstraintValidator;
+import javax.validation.ConstraintValidatorContext;
+
+public class PhoneConstraint implements ConstraintValidator<Phone, String> {
+
+    private String regexp;
+
+    @Override
+    public void initialize(Phone phoneAnnotation) {
+        this.regexp = phoneAnnotation.regexp();
+    }
+
+    @Override
+    public boolean isValid(String value, ConstraintValidatorContext context) {
+        if (value == null) {
+            return true;        //  HV000028: Unexpected exception during isValid call
+        }
+
+        if (value.matches(regexp)) {
+            return true;
+        }
+        return false;
+    }
+
+}
+```
+
+
+
+
+
+
+```
+public class People {  
+  
+    //name字段不为空，且长度在3-8之间  
+    @NotEmpty  
+    @Size(min=3,max=8)  
+    private String name;  
+  
+    public String getName() {  
+        return name;  
+    }  
+  
+    public void setName(String name) {  
+        this.name = name;  
+    }  
+      
+}  
+```
+
+
+
+```
+@Controller  
+public class FirstController {  
+      
+    @RequestMapping("/addPeople")  
+    public @ResponseBody String addPeople(@Valid People p,BindingResult result)  
+    {  
+        System.out.println("people's name:" + p.getName());  
+        if(result.hasErrors())  
+        {  
+            return "0";  
+        }  
+        return "1";  
+    }  
+}  
+```
+
+@Valid注解所标注的就是要检验的参数，BindingResult是检验结果。BindingResult必须紧跟在验证参数之后，即@Valid修饰参数后。否则报错
+
+
+
+
+
+
+
+Bean Validation 标准化了Java平台的约束定义、描述、和验证。
+
+官网  http://beanvalidation.org/
+
+
+
+#版本
+	Bean Validation 1.0（JSR-303）
+		定义了基于注解方式的JavaBean验证元数据模型和API，也可以通过XML进行元数据定义，但注解将覆盖XML的元数据定义。
+		
+	Bean Validation 1.1（JSR-349）
+		JSR-303主要是对JavaBean进行验证，如方法级别（方法参数/返回值）、依赖注入等的验证是没有指定的。因此又有了JSR-349规范的产生。
+		
+	Bean Validation 2.0 (JSR 380) 
+		 需要 JDK 8 或更高版本。
+		 
+#在开发中的位置
+可以在任何位置实施验证。
+
+![这里写图片描述](http://img.blog.csdn.net/20170906101554619?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQvcm9kX2pvaG4=/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/SouthEast)
+
+#Hibernate Validator
+Hibernate Validator 是 Bean Validation 的参考实现 . Hibernate Validator 提供了 JSR 303 规范中所有内置 constraint 的实现，除此之外还有一些附加的 constraint
+官网  http://hibernate.org/validator/
+
+
+#JSR
+JSR是Java Specification Requests的缩写，意思是Java 规范提案。是指向JCP(Java Community Process)提出新增一个标准化技术规范的正式请求。任何人都可以提交JSR，以向Java平台增添新的API和服务。JSR已成为Java界的一个重要标准。
+
+
+#参考
+这个是不错的
+http://jinnianshilongnian.iteye.com/blog/1495594
+http://jinnianshilongnian.iteye.com/blog/1990081
+
+	
