--- a/50_spring-boot/510_timer/readme/10_概述.md
+++ b/50_spring-boot/510_timer/readme/10_概述.md
@@ -15,3 +15,61 @@ public class SpringBootTimer {
     }    
 
 }
+
+
+
+
+#SpringBoot
+
+####1、开启定时任务
+
+	1.如果加在入口类上,表示开启全部的定时任务
+	2.如果加在业务类上,表示开启这个类内部的的定时任务
+```
+@SpringBootApplication
+@EnableScheduling
+public class MainApplication {
+	public static void main(String[] args)  {
+		SpringApplication.run(MainApplication.class, args);
+	}
+}
+```
+####2.创建定时器类
+
+	1.类上添加@Component ，将业务类交给IOC容器	
+	2.方法上添加@Scheduled，定制定时策略
+```
+@Component
+public class Timer {
+	
+    private final Logger logger = LoggerFactory.getLogger(this.getClass());  
+    
+    @Scheduled(cron="0 0/1 * * * ?") //每分钟执行一次  
+    public void statusCheck() {      
+        logger.info("每分钟执行一次。");  
+    }    
+  
+    @Scheduled(fixedRate=20000)  
+    public void testTasks() {      
+        logger.info("每20秒执行一次。");  
+    }    
+    
+}
+```
+
+####3.定时策略
+Scheduled有三个参数
+
+	CRON:使用corn表达式
+	fixedDelay:固定触发间隔
+	fixedRate:固定触发频率
+	initialDelay:首次延时
+区别如图:
+![偷得图](http://img.blog.csdn.net/20170907141214058?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQvcm9kX2pvaG4=/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/SouthEast)
+
+
+
+
+
+#参考
+http://blog.csdn.net/applebomb/article/details/52400154
