--- a/60_spring-cloud/10_概述.md
+++ b/60_spring-cloud/10_概述.md
@@ -2,5 +2,8 @@
 
 
 # 参考
+中文社区 
+https://springcloud.cc/ 
+http://blog.csdn.net/forezp/article/details/70148833
 
 http://www.ityouknow.com/springcloud/2017/05/01/simple-springcloud.html
